fix: spacing and renaming

--- a/src/assets/styles/components/_article.scss
+++ b/src/assets/styles/components/_article.scss
@@ -1,4 +1,3 @@
 .article {
-  max-width: $text-width;
-  margin-bottom: $spacing-large;
+
 }
